Make sure tests are not allocating heavily + repackager